force-app/main/default/objects/Required_Action__c/Required_Action__c.object-meta.xml
<CustomObject>
    <label>Required Action</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Required Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>