force-app/main/default/objects/Required_Action__c/fields/Affected_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Affected_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Deliverable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Deliverables__c.Work_Breakdown_Structure__c</field>
            <operation>equals</operation>
            <valueField>$Source.Work_Breakdown_Structure__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Deliverables__c</referenceTo>
    <relationshipLabel>Required Actions</relationshipLabel>
    <relationshipName>Required_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>