force-app/main/default/objects/Required_Action__c/fields/Finish_before_Activation__c.field-meta.xml
<CustomField>
    <fullName>Finish_before_Activation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finish before Activation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Deliverables__c.Work_Breakdown_Structure__c</field>
            <operation>equals</operation>
            <valueField>$Source.Work_Breakdown_Structure__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Deliverables__c</referenceTo>
    <relationshipLabel>Activate Upon Completion</relationshipLabel>
    <relationshipName>Activated_when_Complete</relationshipName>
    <type>Lookup</type>
</CustomField>