force-app/main/default/objects/Required_Action__c/fields/Finish_Before_Completion__c.field-meta.xml
<CustomField>
    <fullName>Finish_Before_Completion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finish Before Completion</label>
    <referenceTo>Project_Deliverables__c</referenceTo>
    <relationshipLabel>Unlock Upon Completion</relationshipLabel>
    <relationshipName>Unlock_Upon_Completion</relationshipName>
    <type>Lookup</type>
</CustomField>