force-app/main/default/objects/Required_Action__c/fields/Non_Linear_Progression_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Non_Linear_Progression_Trigger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Linear Progression Trigger</label>
    <referenceTo>Required_Action__c</referenceTo>
    <relationshipLabel>Required Actions</relationshipLabel>
    <relationshipName>Required_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>