force-app/main/default/objects/Required_Action__c/fields/Not_Needed_Declined_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Not_Needed_Declined_at_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Needed/Declined at Creation</label>
    <type>Checkbox</type>
</CustomField>