force-app/main/default/objects/Required_Action__c/fields/Work_Breakdown_Structure__c.field-meta.xml
<CustomField>
    <fullName>Work_Breakdown_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Breakdown Structure</label>
    <referenceTo>Work_Breakdown_Structure__c</referenceTo>
    <relationshipLabel>Completion Actions</relationshipLabel>
    <relationshipName>Completion_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>