force-app/main/default/objects/Required_Action__c/recordTypes/Default_Action.recordType-meta.xml
<RecordType>
    <fullName>Default_Action</fullName>
    <active>true</active>
    <label>Default Action</label>
</RecordType>