force-app/main/default/objects/Required_Action__c/recordTypes/Non_Linear_Progression_Group.recordType-meta.xml
<RecordType>
    <fullName>Non_Linear_Progression_Group</fullName>
    <active>true</active>
    <label>Non-Linear Progression Group</label>
</RecordType>